--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+            <p>&copy; Copyright Hareem Awan 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
         </footer>
     </body>
     </html>
