--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>San Joaquin Valley Town Hall</title>
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="townhallfiles_A08/images/favicon.ico">
     </head>
 
     <body>
@@ -39,13 +39,7 @@
         </main>
 
         <footer>
-            <p>&copy; Copyright Hareem Awan 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+            <p>&copy; Copyright Hareem Awan, 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
         </footer>
     </body>
-    </html>
-    </title>
-    </head>
-<body>
-
-</body>
 </html>
